--- a/attributes-project.html
+++ b/attributes-project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="attributes-project.css">
+    <link rel="stylesheet" href="attributes-project.scss">
     <script>
       window.addEventListener("DOMContentLoaded", event => {
         let collapsibles = document.querySelectorAll(".menu.collapsible h5");
